--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Angel Schedule 2.1</string>
+    <string name="hint_notepad">Escribe aquí&#8230;</string>
     <string name="horas8">8:00 &#8212; 10:00</string>
     <string name="horas10">10:00 &#8212; 12:00</string>
     <string name="horas12">12:00 &#8212; 2:00</string>
